--- a/WebContent/views/web/noticias.zul
+++ b/WebContent/views/web/noticias.zul
@@ -37,17 +37,17 @@
 											</a>
 										</div>
 									</div>
-									<div class="col s12 citas">
-										<div sclass="divTag">
-											<label value="Tag"></label><span sclass="fa fa-circle"></span>
-										</div>
-										<div sclass="divTag">
-											<label value="Tag"></label><span sclass="fa fa-circle"></span>
-										</div>
-										<div sclass="divTag">
-											<label value="Tag"></label><span sclass="fa fa-circle"></span>
-										</div>
-									</div>
+<!-- 									<div class="col s12 citas"> -->
+<!-- 										<div sclass="divTag"> -->
+<!-- 											<label value="Tag"></label><span sclass="fa fa-circle"></span> -->
+<!-- 										</div> -->
+<!-- 										<div sclass="divTag"> -->
+<!-- 											<label value="Tag"></label><span sclass="fa fa-circle"></span> -->
+<!-- 										</div> -->
+<!-- 										<div sclass="divTag"> -->
+<!-- 											<label value="Tag"></label><span sclass="fa fa-circle"></span> -->
+<!-- 										</div> -->
+<!-- 									</div> -->
 								</div>
 							</div>
 						</template>
