--- a/WebContent/views/desktop/administracion/appMovil/buzon/BuzonMovilIndex.zul
+++ b/WebContent/views/desktop/administracion/appMovil/buzon/BuzonMovilIndex.zul
@@ -2,7 +2,7 @@
 	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.administracion.portalweb.comentarios.album.viewmodels.VM_ComentariosAlbumIndex')">
+		viewModel="@id('vm') @init('ve.smile.administracion.app_movil.buzon.viewmodels.VM_BuzonMovilIndex')">
 
 		<div class="row">
 			<div class="col s12">
@@ -11,18 +11,28 @@
 						selectedItem="@bind(vm.selectedObject)">
 						<listhead sizable="true">
 							<listheader width="25%" label="Nombre" />
+							<listheader width="25%" label="Apellido" />
 							<listheader width="35%" label="Correo" />
-							<listheader width="25%" label="Comentario" />
-							<listheader width="25%" label="Puntuación" />
-							
+							<listheader width="25%"
+								label="Clasificador" />
+							<listheader width="25%" label="Contenido" />
+							<listheader width="25%"
+								label="Fecha de Creación" />
+
 						</listhead>
 						<template name="model">
 							<listitem>
-								<listcell label="@load(each.fkComunidad.nombre.concat(' ').concat(each.fkComunidad.apellido))" />
-								<listcell label="@load(each.fkComunidad.correo)" />
-								<listcell label="@load(each.comentario)" />
-								<listcell label="@load(each.puntuacion)" />
-								
+								<listcell
+									label="@load(each.fkComunidad.nombre)" />
+								<listcell
+									label="@load(each.fkComunidad.apellido)" />
+								<listcell
+									label="@load(each.fkComunidad.correo)" />
+								<listcell
+									label="@load(each.fkClasificadorSugerencia.nombre)" />
+								<listcell label="@load(each.contenido)" />
+								<listcell label="@load(each.fecha)" />
+
 							</listitem>
 						</template>
 						<listfoot>
