--- a/WebContent/views/desktop/administracion/portalweb/mensajes/pregunta/PreguntaFormBasic.zul
+++ b/WebContent/views/desktop/administracion/portalweb/mensajes/pregunta/PreguntaFormBasic.zul
@@ -6,48 +6,60 @@
 
 		<div class="row">
 			<div sclass="col s12 form">
-							<div class="input-field col s6">
-								<n:label for="nombre">Nombre</n:label>
-								<textbox id="nombre" type="text" disabled="true" value="@bind(vm.contactoPortal.fkComunidad.nombre)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="apellido">Apellido</n:label>
-								<textbox id="apellido" type="text" disabled="true" value="@bind(vm.contactoPortal.fkComunidad.apellido)"> </textbox>
-							</div>
-							
-							<div class="input-field col s6">
-								<n:label for="correo">Correo</n:label>
-								<textbox id="correo" type="text" disabled="true" value="@bind(vm.contactoPortal.fkComunidad.correo)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="frecuencia">Clasificador</n:label>
-								<textbox id="frecuencia" type="text" disabled="true" value="@bind(vm.contactoPortal.fkClasificadorSugerencia.nombre)"> </textbox>
-							</div>
-							<div class="input-field col s6">
-								<n:label for="contenido" class="active">Contenido</n:label>
-								<textbox id="contenido" type="text" disabled="true" value="@bind(vm.contactoPortal.contenido)"> </textbox>
-							</div>
-							
-							<div class="input-field col s6">
-								<n:label for="fecha" class="active">Fecha de Creación</n:label>
-								<datebox id="fecha" cols="20" format="yyyy/MM/dd" disabled="true" value="@bind(vm.contactoPortal.fecha)"/>
-							</div>
-							<!-- 		
-							<div class="input-field col s6">
-								<n:label for="motivo">Motivo</n:label>
-								<textbox id="motivo" type="text" disabled="true" value="@bind(vm.contactoPortal.fkClasificadorSugerencia.nombre)"> </textbox>
-							</div>		
-					 -->
-							<div class="input-field col s12">
-								<n:label for="respuesta">Respuesta</n:label>
-								<textbox id="respuesta" maxlength="400" multiline="true" type="text" class="materialize-textarea" value="@bind(vm.respuesta)"> </textbox>
-							</div>
-							
+				<div class="input-field col s6">
+					<n:label for="nombre">Nombre</n:label>
+					<textbox id="nombre" type="text" disabled="true"
+						value="@bind(vm.contactoPortal.fkComunidad.nombre)">
+					</textbox>
+				</div>
+
+				<div class="input-field col s6">
+					<n:label for="apellido">Apellido</n:label>
+					<textbox id="apellido" type="text" disabled="true"
+						value="@bind(vm.contactoPortal.fkComunidad.apellido)">
+					</textbox>
+				</div>
+
+				<div class="input-field col s6">
+					<n:label for="correo">Correo</n:label>
+					<textbox id="correo" type="text" disabled="true"
+						value="@bind(vm.contactoPortal.fkComunidad.correo)">
+					</textbox>
+				</div>
+
+				<div class="input-field col s6">
+					<n:label for="contenido" class="active">
+						Contenido
+					</n:label>
+					<textbox id="contenido" type="text" disabled="true"
+						value="@bind(vm.contactoPortal.contenido)">
+					</textbox>
+				</div>
+
+				<div class="input-field col s6">
+					<n:label for="fecha" class="active">
+						Fecha de Creación
+					</n:label>
+					<datebox id="fecha" cols="20" format="yyyy/MM/dd"
+						disabled="true" value="@bind(vm.contactoPortal.fecha)" />
+				</div>
+				<!-- 		
+					<div class="input-field col s6">
+					<n:label for="motivo">Motivo</n:label>
+					<textbox id="motivo" type="text" disabled="true" value="@bind(vm.contactoPortal.fkClasificadorSugerencia.nombre)"> </textbox>
+					</div>		
+				-->
+				<div class="input-field col s12">
+					<n:label for="respuesta">Respuesta</n:label>
+					<textbox id="respuesta" maxlength="400"
+						multiline="true" type="text" class="materialize-textarea"
+						value="@bind(vm.respuesta)">
+					</textbox>
+				</div>
+
 			</div>
 		</div>
-		
+
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
