--- a/WebContent/reporte/estadisticoTrabajoSocialPlanificadosVsEjecutados.jrxml
+++ b/WebContent/reporte/estadisticoTrabajoSocialPlanificadosVsEjecutados.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="estadisticoPlanificadosVsEjecutados" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c607fd6c-d212-4980-84dc-cd5658481add">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="187"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="pIndicador" class="java.lang.String"/>
 	<parameter name="pUnidadDeMedida" class="java.lang.String"/>
 	<parameter name="pValorEsperado" class="java.lang.String"/>
@@ -13,7 +13,7 @@
 	<parameter name="pDescripcion" class="java.lang.String"/>
 	<parameter name="pLugar" class="java.lang.String"/>
 	<parameter name="pDireccion" class="java.lang.String"/>
-	<parameter name="pFecha" class="java.lang.String"/>
+	<parameter name="pFecha" class="java.lang.Long"/>
 	<parameter name="tDireccionOrganizacion" class="java.lang.String"/>
 	<parameter name="tTelefonoOrganizacion" class="java.lang.String"/>
 	<parameter name="tCorreoOrganizacion" class="java.lang.String"/>
@@ -96,21 +96,14 @@
 				<textFieldExpression><![CDATA[$P{pNombreTrabajoSocial}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="122" y="83" width="428" height="20" uuid="2b972f42-d859-4b4d-9075-79d6c8c9a8b1"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{pTipoTrabajoSocial}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="122" y="137" width="428" height="20" uuid="80383281-cc05-464e-bf62-0abe5b1a46e3"/>
+				<reportElement x="122" y="120" width="428" height="20" uuid="80383281-cc05-464e-bf62-0abe5b1a46e3"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{pDescripcion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="122" y="163" width="428" height="20" uuid="439cff84-5098-4118-8991-aeae09c8826d"/>
+				<reportElement x="122" y="155" width="428" height="20" uuid="439cff84-5098-4118-8991-aeae09c8826d"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="10"/>
 				</textElement>
@@ -124,7 +117,7 @@
 				<textFieldExpression><![CDATA[$P{pDireccion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="110" width="427" height="20" uuid="4d2f5188-da6e-4b6e-bb4c-c5cd2356b5c6"/>
+				<reportElement x="123" y="88" width="427" height="20" uuid="4d2f5188-da6e-4b6e-bb4c-c5cd2356b5c6"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="10"/>
 				</textElement>
@@ -134,28 +127,21 @@
 				<reportElement x="1" y="52" width="554" height="1" forecolor="#C2D62D" uuid="8bef51eb-7996-4281-8791-7a7d6dcd0fdc"/>
 			</line>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="1" y="190" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="23d476cd-e71b-45f8-b76a-5ce53a0316d3"/>
+				<reportElement mode="Opaque" x="1" y="193" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="23d476cd-e71b-45f8-b76a-5ce53a0316d3"/>
 				<textElement textAlignment="Left">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Dirección"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="0" y="137" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="2672a050-ad2b-4cd9-bc3c-e74965df47d5"/>
+				<reportElement mode="Opaque" x="0" y="121" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="2672a050-ad2b-4cd9-bc3c-e74965df47d5"/>
 				<textElement textAlignment="Left">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Descripción"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="1" y="83" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="d97210ae-ff26-4535-98f6-64084f0775ed"/>
-				<textElement textAlignment="Left">
-					<font fontName="Arial" size="12" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Tipo"]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="1" y="110" width="100" height="20" isRemoveLineWhenBlank="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="80b13940-c6cc-4571-ad68-d3855b8e403f"/>
+				<reportElement mode="Opaque" x="1" y="89" width="100" height="20" isRemoveLineWhenBlank="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="80b13940-c6cc-4571-ad68-d3855b8e403f"/>
 				<textElement textAlignment="Left">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
@@ -169,7 +155,7 @@
 				<textFieldExpression><![CDATA["Nombre"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="1" y="163" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="76112236-d161-4756-9a3a-3eb163d6f7b9"/>
+				<reportElement mode="Opaque" x="1" y="157" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="76112236-d161-4756-9a3a-3eb163d6f7b9"/>
 				<textElement textAlignment="Left">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
