--- a/WebContent/views/desktop/reportes/estadisticos/planificadosVsEjecutados/selectOpcionesPlanificadosVsEjecutados.zul
+++ b/WebContent/views/desktop/reportes/estadisticos/planificadosVsEjecutados/selectOpcionesPlanificadosVsEjecutados.zul
@@ -27,32 +27,10 @@
 
 	</style>
 	<div width="100%" class=" ${arg.animation_} container_reporte">
-		<div sclass="row">
-			<div sclass="col s12">
-				<!-- 				<div sclass="col s2" style="padding: 0px"> -->
-				<!-- 					<checkbox label="Fecha Planificada" -->
-				<!-- 						checked="@bind(vm.fechaIngreso)" /> -->
-				<!-- 				</div> -->
-				<!-- 				<div sclass="col s3" visible="@bind(vm.fechaIngreso)"> -->
-				<!-- 					<label value="Fecha Desde"></label> -->
-				<!-- 					<datebox format="dd/MM/yyyy" -->
-				<!-- 						value="@bind(vm.fechaDesdeDate)"> -->
-				<!-- 					</datebox> -->
-				<!-- 				</div> -->
-				<!-- 				<div sclass="col s3" visible="@bind(vm.fechaIngreso)"> -->
-				<!-- 					<label value="Fecha Hasta"></label> -->
-				<!-- 					<datebox format="dd/MM/yyyy" -->
-				<!-- 						value="@bind(vm.fechaHastaDate)"> -->
-				<!-- 					</datebox> -->
-				<!-- 				</div> -->
-			</div>
-		</div>
-
-
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el Trabajo Social planificado"
+				<label value="Seleccione el evento planificado"
 					sclass="label-medium-500">
 				</label>
 			</div>
@@ -80,9 +58,9 @@
 							<template name="model">
 								<listitem>
 									<listcell
-										label="@load(each.fkTrabajoSocial.nombre)" />
+										label="@load(each.fkEvento.nombre)" />
 									<listcell
-										label="@load(each.fkTrabajoSocial.descripcion)" />
+										label="@load(each.fkEvento.descripcion)" />
 									<listcell
 										label="${m:convertirLongADate(each.fechaPlanificada)}" />
 									<listcell
