--- a/WebContent/reporte/reportEventosPlanificadosParametrizados.jrxml
+++ b/WebContent/reporte/reportEventosPlanificadosParametrizados.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reportEventosPlanificadosParametrizados" printOrder="Horizontal" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" scriptletClass="net.sf.jasperreports.engine.JRDefaultScriptlet" uuid="2cc1dfe8-35f4-44cb-b41c-1c58e9d3b41e">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="107"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="73"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Soaint\\Desktop\\"]]></defaultValueExpression>
@@ -102,70 +102,70 @@
 				<text><![CDATA[Clasificación]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement x="257" y="73" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="24e5e084-6b85-4a0a-bf8f-a374f0cb33f5"/>
+				<reportElement x="257" y="73" width="100" height="20" uuid="24e5e084-6b85-4a0a-bf8f-a374f0cb33f5"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fechaDesde}.equals("") ? null : $P{fechaDesde}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement x="551" y="73" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="6a01c63c-3b43-402e-92d9-edf3f14e8d5b"/>
+				<reportElement x="551" y="73" width="100" height="20" uuid="6a01c63c-3b43-402e-92d9-edf3f14e8d5b"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fechaHasta}.equals("") ? null : $P{fechaHasta}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="217" y="159" width="477" height="20" isPrintWhenDetailOverflows="true" uuid="469a4b5c-5bfa-49b7-a4ec-054c0e815b28"/>
+				<reportElement x="217" y="159" width="477" height="20" uuid="469a4b5c-5bfa-49b7-a4ec-054c0e815b28"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{tTareas}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement x="217" y="185" width="477" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="97728ca2-ba43-4ae0-9e6e-50b3c2bc94de"/>
+				<reportElement x="217" y="185" width="477" height="20" uuid="97728ca2-ba43-4ae0-9e6e-50b3c2bc94de"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{eventosClasificadosP}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="217" y="134" width="477" height="20" isPrintWhenDetailOverflows="true" uuid="1a36b248-58e4-4caf-8f9f-362f97a3d6df"/>
+				<reportElement x="217" y="134" width="477" height="20" uuid="1a36b248-58e4-4caf-8f9f-362f97a3d6df"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{indicadoresP}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="217" y="109" width="477" height="20" isPrintWhenDetailOverflows="true" uuid="e9716f98-f528-4892-adc6-1bc15c408a6d"/>
+				<reportElement x="217" y="109" width="477" height="20" uuid="e9716f98-f528-4892-adc6-1bc15c408a6d"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{estatusEventosP}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="150" y="73" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="d07a5b8c-154d-4891-81a2-b17e6640ed32"/>
+				<reportElement mode="Opaque" x="150" y="73" width="100" height="20" isRemoveLineWhenBlank="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="d07a5b8c-154d-4891-81a2-b17e6640ed32"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{tFechaDesde}.equals("") ? null : $P{tFechaDesde}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="446" y="73" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="125552e5-087e-44e7-857b-f3edb164f296"/>
+				<reportElement mode="Opaque" x="446" y="73" width="100" height="20" isRemoveLineWhenBlank="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="125552e5-087e-44e7-857b-f3edb164f296"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{tfechaHasta}.equals("") ? null : $P{tfechaHasta}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="109" y="110" width="100" height="19" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="e5772a53-a17c-4393-a098-838bf5a86fd7"/>
+				<reportElement mode="Opaque" x="109" y="110" width="100" height="19" isRemoveLineWhenBlank="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="e5772a53-a17c-4393-a098-838bf5a86fd7"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{tStatus}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="109" y="134" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="61f5a744-61e1-4c57-b998-a8c87f19dd5b"/>
+				<reportElement mode="Opaque" x="109" y="134" width="100" height="20" isRemoveLineWhenBlank="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="61f5a744-61e1-4c57-b998-a8c87f19dd5b"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
@@ -179,7 +179,7 @@
 				<textFieldExpression><![CDATA[$P{tTareas}==""?null : $P{tTareas}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement mode="Opaque" x="108" y="185" width="100" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="0dada9c1-39c8-40ae-96b4-bdfd92cb0876"/>
+				<reportElement mode="Opaque" x="108" y="185" width="100" height="20" isRemoveLineWhenBlank="true" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="0dada9c1-39c8-40ae-96b4-bdfd92cb0876"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
@@ -256,7 +256,7 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="26">
+		<band height="24">
 			<textField>
 				<reportElement x="0" y="0" width="116" height="20" uuid="276688e5-40fd-4b41-9357-60319805ca94"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
@@ -297,7 +297,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new SimpleDateFormat("dd/MM/yyyy").format($F{fechaPlanificada})]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{fechaPlanificada}!=null ? new SimpleDateFormat("dd/MM/yyyy").format($F{fechaPlanificada}):new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="714" y="0" width="88" height="20" uuid="374f8aa1-763d-405b-b740-11420d599990"/>
