--- a/WebContent/views/desktop/administracion/appMovil/usuarios/usuariosMovilFormBasic.zul
+++ b/WebContent/views/desktop/administracion/appMovil/usuarios/usuariosMovilFormBasic.zul
@@ -5,7 +5,7 @@
 	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.administracion.app_movil.viewmodels.VM_UsuariosMovilFormBasic')">
+		viewModel="@id('vm') @init('ve.smile.administracion.app_movil.usuarios.viewmodels.VM_UsuariosMovilFormBasic')">
 
 		<div class="row">
 
