--- a/WebContent/views/desktop/administracion/appMovil/usuarios/usuariosMovilIndex.zul
+++ b/WebContent/views/desktop/administracion/appMovil/usuarios/usuariosMovilIndex.zul
@@ -5,7 +5,7 @@
 	<div width="100%" class="${arg.animation_}"
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.administracion.app_movil.viewmodels.VM_UsuariosMovilIndex')">
+		viewModel="@id('vm') @init('ve.smile.administracion.app_movil.usuarios.viewmodels.VM_UsuariosMovilIndex')">
 
 		<div class="row">
 			<div class="col s12">
